// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkExtraLargeSpinner should render correctly 1`] = `
<svg
  className="bpk-spinner bpk-spinner--extra-large bpk-spinner--dark"
  height="36"
  width="36"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clipRule="evenodd"
    d="M18 9.986a1.418 1.418 0 0 1-1.414-1.415V2.914c0-.778.636-1.414 1.414-1.414.778 0 1.414.636 1.414 1.414v5.657c0 .778-.636 1.415-1.414 1.415"
    opacity=".65"
  />
  <path
    clipRule="evenodd"
    d="M22.007 11.06a1.418 1.418 0 0 1-.518-1.932l2.83-4.9a1.418 1.418 0 0 1 1.931-.517c.674.389.907 1.258.518 1.932l-2.829 4.899a1.418 1.418 0 0 1-1.932.517"
    opacity=".75"
  />
  <path
    clipRule="evenodd"
    d="M24.94 13.993a1.418 1.418 0 0 1 .518-1.932l4.9-2.829a1.418 1.418 0 0 1 1.931.518 1.418 1.418 0 0 1-.517 1.932l-4.9 2.829a1.418 1.418 0 0 1-1.931-.518"
    opacity=".85"
  />
  <path
    clipRule="evenodd"
    d="M26.014 18c0-.778.637-1.414 1.415-1.414h5.657c.778 0 1.414.636 1.414 1.414 0 .778-.636 1.414-1.414 1.414h-5.657A1.418 1.418 0 0 1 26.014 18"
    opacity=".9"
  />
  <path
    clipRule="evenodd"
    d="M24.94 22.007a1.418 1.418 0 0 1 1.932-.518l4.9 2.83c.673.388.906 1.257.517 1.931a1.418 1.418 0 0 1-1.932.518l-4.899-2.829a1.419 1.419 0 0 1-.517-1.932"
    opacity=".2"
  />
  <path
    clipRule="evenodd"
    d="M22.007 24.94a1.418 1.418 0 0 1 1.932.518l2.829 4.9a1.418 1.418 0 0 1-.518 1.931 1.418 1.418 0 0 1-1.932-.517l-2.829-4.9a1.418 1.418 0 0 1 .518-1.931"
    opacity=".25"
  />
  <path
    clipRule="evenodd"
    d="M18 26.014c.778 0 1.414.637 1.414 1.415v5.657c0 .778-.636 1.414-1.414 1.414a1.418 1.418 0 0 1-1.414-1.414v-5.657c0-.778.636-1.415 1.414-1.415"
    opacity=".3"
  />
  <path
    clipRule="evenodd"
    d="M13.993 24.94a1.42 1.42 0 0 1 .518 1.932l-2.83 4.9a1.418 1.418 0 0 1-1.931.517 1.418 1.418 0 0 1-.518-1.932l2.829-4.899a1.418 1.418 0 0 1 1.932-.517"
    opacity=".35"
  />
  <path
    clipRule="evenodd"
    d="M11.06 22.007a1.418 1.418 0 0 1-.518 1.932l-4.9 2.829a1.418 1.418 0 0 1-1.931-.518 1.418 1.418 0 0 1 .517-1.932l4.9-2.829a1.418 1.418 0 0 1 1.931.518"
    opacity=".4"
  />
  <path
    clipRule="evenodd"
    d="M9.986 18c0 .778-.637 1.414-1.415 1.414H2.914A1.418 1.418 0 0 1 1.5 18c0-.778.636-1.414 1.414-1.414h5.657c.778 0 1.415.636 1.415 1.414"
    opacity=".45"
  />
  <path
    clipRule="evenodd"
    d="M11.06 13.993a1.418 1.418 0 0 1-1.932.518l-4.9-2.83a1.418 1.418 0 0 1-.517-1.931 1.418 1.418 0 0 1 1.932-.518l4.899 2.829c.674.389.906 1.258.517 1.932"
    opacity=".5"
  />
  <path
    clipRule="evenodd"
    d="M13.993 11.06a1.418 1.418 0 0 1-1.932-.518l-2.829-4.9a1.418 1.418 0 0 1 .518-1.931 1.418 1.418 0 0 1 1.932.517l2.829 4.9a1.418 1.418 0 0 1-.518 1.931"
    opacity=".55"
  />
</svg>
`;

exports[`BpkExtraLargeSpinner should render correctly with a "className" attribute 1`] = `
<svg
  className="bpk-spinner bpk-spinner--extra-large bpk-spinner--dark my-custom-class"
  height="36"
  width="36"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clipRule="evenodd"
    d="M18 9.986a1.418 1.418 0 0 1-1.414-1.415V2.914c0-.778.636-1.414 1.414-1.414.778 0 1.414.636 1.414 1.414v5.657c0 .778-.636 1.415-1.414 1.415"
    opacity=".65"
  />
  <path
    clipRule="evenodd"
    d="M22.007 11.06a1.418 1.418 0 0 1-.518-1.932l2.83-4.9a1.418 1.418 0 0 1 1.931-.517c.674.389.907 1.258.518 1.932l-2.829 4.899a1.418 1.418 0 0 1-1.932.517"
    opacity=".75"
  />
  <path
    clipRule="evenodd"
    d="M24.94 13.993a1.418 1.418 0 0 1 .518-1.932l4.9-2.829a1.418 1.418 0 0 1 1.931.518 1.418 1.418 0 0 1-.517 1.932l-4.9 2.829a1.418 1.418 0 0 1-1.931-.518"
    opacity=".85"
  />
  <path
    clipRule="evenodd"
    d="M26.014 18c0-.778.637-1.414 1.415-1.414h5.657c.778 0 1.414.636 1.414 1.414 0 .778-.636 1.414-1.414 1.414h-5.657A1.418 1.418 0 0 1 26.014 18"
    opacity=".9"
  />
  <path
    clipRule="evenodd"
    d="M24.94 22.007a1.418 1.418 0 0 1 1.932-.518l4.9 2.83c.673.388.906 1.257.517 1.931a1.418 1.418 0 0 1-1.932.518l-4.899-2.829a1.419 1.419 0 0 1-.517-1.932"
    opacity=".2"
  />
  <path
    clipRule="evenodd"
    d="M22.007 24.94a1.418 1.418 0 0 1 1.932.518l2.829 4.9a1.418 1.418 0 0 1-.518 1.931 1.418 1.418 0 0 1-1.932-.517l-2.829-4.9a1.418 1.418 0 0 1 .518-1.931"
    opacity=".25"
  />
  <path
    clipRule="evenodd"
    d="M18 26.014c.778 0 1.414.637 1.414 1.415v5.657c0 .778-.636 1.414-1.414 1.414a1.418 1.418 0 0 1-1.414-1.414v-5.657c0-.778.636-1.415 1.414-1.415"
    opacity=".3"
  />
  <path
    clipRule="evenodd"
    d="M13.993 24.94a1.42 1.42 0 0 1 .518 1.932l-2.83 4.9a1.418 1.418 0 0 1-1.931.517 1.418 1.418 0 0 1-.518-1.932l2.829-4.899a1.418 1.418 0 0 1 1.932-.517"
    opacity=".35"
  />
  <path
    clipRule="evenodd"
    d="M11.06 22.007a1.418 1.418 0 0 1-.518 1.932l-4.9 2.829a1.418 1.418 0 0 1-1.931-.518 1.418 1.418 0 0 1 .517-1.932l4.9-2.829a1.418 1.418 0 0 1 1.931.518"
    opacity=".4"
  />
  <path
    clipRule="evenodd"
    d="M9.986 18c0 .778-.637 1.414-1.415 1.414H2.914A1.418 1.418 0 0 1 1.5 18c0-.778.636-1.414 1.414-1.414h5.657c.778 0 1.415.636 1.415 1.414"
    opacity=".45"
  />
  <path
    clipRule="evenodd"
    d="M11.06 13.993a1.418 1.418 0 0 1-1.932.518l-4.9-2.83a1.418 1.418 0 0 1-.517-1.931 1.418 1.418 0 0 1 1.932-.518l4.899 2.829c.674.389.906 1.258.517 1.932"
    opacity=".5"
  />
  <path
    clipRule="evenodd"
    d="M13.993 11.06a1.418 1.418 0 0 1-1.932-.518l-2.829-4.9a1.418 1.418 0 0 1 .518-1.931 1.418 1.418 0 0 1 1.932.517l2.829 4.9a1.418 1.418 0 0 1-.518 1.931"
    opacity=".55"
  />
</svg>
`;

exports[`BpkExtraLargeSpinner should render correctly with type as light 1`] = `
<svg
  className="bpk-spinner bpk-spinner--extra-large bpk-spinner--light"
  height="36"
  width="36"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clipRule="evenodd"
    d="M18 9.986a1.418 1.418 0 0 1-1.414-1.415V2.914c0-.778.636-1.414 1.414-1.414.778 0 1.414.636 1.414 1.414v5.657c0 .778-.636 1.415-1.414 1.415"
    opacity=".65"
  />
  <path
    clipRule="evenodd"
    d="M22.007 11.06a1.418 1.418 0 0 1-.518-1.932l2.83-4.9a1.418 1.418 0 0 1 1.931-.517c.674.389.907 1.258.518 1.932l-2.829 4.899a1.418 1.418 0 0 1-1.932.517"
    opacity=".75"
  />
  <path
    clipRule="evenodd"
    d="M24.94 13.993a1.418 1.418 0 0 1 .518-1.932l4.9-2.829a1.418 1.418 0 0 1 1.931.518 1.418 1.418 0 0 1-.517 1.932l-4.9 2.829a1.418 1.418 0 0 1-1.931-.518"
    opacity=".85"
  />
  <path
    clipRule="evenodd"
    d="M26.014 18c0-.778.637-1.414 1.415-1.414h5.657c.778 0 1.414.636 1.414 1.414 0 .778-.636 1.414-1.414 1.414h-5.657A1.418 1.418 0 0 1 26.014 18"
    opacity=".9"
  />
  <path
    clipRule="evenodd"
    d="M24.94 22.007a1.418 1.418 0 0 1 1.932-.518l4.9 2.83c.673.388.906 1.257.517 1.931a1.418 1.418 0 0 1-1.932.518l-4.899-2.829a1.419 1.419 0 0 1-.517-1.932"
    opacity=".2"
  />
  <path
    clipRule="evenodd"
    d="M22.007 24.94a1.418 1.418 0 0 1 1.932.518l2.829 4.9a1.418 1.418 0 0 1-.518 1.931 1.418 1.418 0 0 1-1.932-.517l-2.829-4.9a1.418 1.418 0 0 1 .518-1.931"
    opacity=".25"
  />
  <path
    clipRule="evenodd"
    d="M18 26.014c.778 0 1.414.637 1.414 1.415v5.657c0 .778-.636 1.414-1.414 1.414a1.418 1.418 0 0 1-1.414-1.414v-5.657c0-.778.636-1.415 1.414-1.415"
    opacity=".3"
  />
  <path
    clipRule="evenodd"
    d="M13.993 24.94a1.42 1.42 0 0 1 .518 1.932l-2.83 4.9a1.418 1.418 0 0 1-1.931.517 1.418 1.418 0 0 1-.518-1.932l2.829-4.899a1.418 1.418 0 0 1 1.932-.517"
    opacity=".35"
  />
  <path
    clipRule="evenodd"
    d="M11.06 22.007a1.418 1.418 0 0 1-.518 1.932l-4.9 2.829a1.418 1.418 0 0 1-1.931-.518 1.418 1.418 0 0 1 .517-1.932l4.9-2.829a1.418 1.418 0 0 1 1.931.518"
    opacity=".4"
  />
  <path
    clipRule="evenodd"
    d="M9.986 18c0 .778-.637 1.414-1.415 1.414H2.914A1.418 1.418 0 0 1 1.5 18c0-.778.636-1.414 1.414-1.414h5.657c.778 0 1.415.636 1.415 1.414"
    opacity=".45"
  />
  <path
    clipRule="evenodd"
    d="M11.06 13.993a1.418 1.418 0 0 1-1.932.518l-4.9-2.83a1.418 1.418 0 0 1-.517-1.931 1.418 1.418 0 0 1 1.932-.518l4.899 2.829c.674.389.906 1.258.517 1.932"
    opacity=".5"
  />
  <path
    clipRule="evenodd"
    d="M13.993 11.06a1.418 1.418 0 0 1-1.932-.518l-2.829-4.9a1.418 1.418 0 0 1 .518-1.931 1.418 1.418 0 0 1 1.932.517l2.829 4.9a1.418 1.418 0 0 1-.518 1.931"
    opacity=".55"
  />
</svg>
`;

exports[`BpkExtraLargeSpinner should render correctly with type as primary 1`] = `
<svg
  className="bpk-spinner bpk-spinner--extra-large bpk-spinner--primary"
  height="36"
  width="36"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clipRule="evenodd"
    d="M18 9.986a1.418 1.418 0 0 1-1.414-1.415V2.914c0-.778.636-1.414 1.414-1.414.778 0 1.414.636 1.414 1.414v5.657c0 .778-.636 1.415-1.414 1.415"
    opacity=".65"
  />
  <path
    clipRule="evenodd"
    d="M22.007 11.06a1.418 1.418 0 0 1-.518-1.932l2.83-4.9a1.418 1.418 0 0 1 1.931-.517c.674.389.907 1.258.518 1.932l-2.829 4.899a1.418 1.418 0 0 1-1.932.517"
    opacity=".75"
  />
  <path
    clipRule="evenodd"
    d="M24.94 13.993a1.418 1.418 0 0 1 .518-1.932l4.9-2.829a1.418 1.418 0 0 1 1.931.518 1.418 1.418 0 0 1-.517 1.932l-4.9 2.829a1.418 1.418 0 0 1-1.931-.518"
    opacity=".85"
  />
  <path
    clipRule="evenodd"
    d="M26.014 18c0-.778.637-1.414 1.415-1.414h5.657c.778 0 1.414.636 1.414 1.414 0 .778-.636 1.414-1.414 1.414h-5.657A1.418 1.418 0 0 1 26.014 18"
    opacity=".9"
  />
  <path
    clipRule="evenodd"
    d="M24.94 22.007a1.418 1.418 0 0 1 1.932-.518l4.9 2.83c.673.388.906 1.257.517 1.931a1.418 1.418 0 0 1-1.932.518l-4.899-2.829a1.419 1.419 0 0 1-.517-1.932"
    opacity=".2"
  />
  <path
    clipRule="evenodd"
    d="M22.007 24.94a1.418 1.418 0 0 1 1.932.518l2.829 4.9a1.418 1.418 0 0 1-.518 1.931 1.418 1.418 0 0 1-1.932-.517l-2.829-4.9a1.418 1.418 0 0 1 .518-1.931"
    opacity=".25"
  />
  <path
    clipRule="evenodd"
    d="M18 26.014c.778 0 1.414.637 1.414 1.415v5.657c0 .778-.636 1.414-1.414 1.414a1.418 1.418 0 0 1-1.414-1.414v-5.657c0-.778.636-1.415 1.414-1.415"
    opacity=".3"
  />
  <path
    clipRule="evenodd"
    d="M13.993 24.94a1.42 1.42 0 0 1 .518 1.932l-2.83 4.9a1.418 1.418 0 0 1-1.931.517 1.418 1.418 0 0 1-.518-1.932l2.829-4.899a1.418 1.418 0 0 1 1.932-.517"
    opacity=".35"
  />
  <path
    clipRule="evenodd"
    d="M11.06 22.007a1.418 1.418 0 0 1-.518 1.932l-4.9 2.829a1.418 1.418 0 0 1-1.931-.518 1.418 1.418 0 0 1 .517-1.932l4.9-2.829a1.418 1.418 0 0 1 1.931.518"
    opacity=".4"
  />
  <path
    clipRule="evenodd"
    d="M9.986 18c0 .778-.637 1.414-1.415 1.414H2.914A1.418 1.418 0 0 1 1.5 18c0-.778.636-1.414 1.414-1.414h5.657c.778 0 1.415.636 1.415 1.414"
    opacity=".45"
  />
  <path
    clipRule="evenodd"
    d="M11.06 13.993a1.418 1.418 0 0 1-1.932.518l-4.9-2.83a1.418 1.418 0 0 1-.517-1.931 1.418 1.418 0 0 1 1.932-.518l4.899 2.829c.674.389.906 1.258.517 1.932"
    opacity=".5"
  />
  <path
    clipRule="evenodd"
    d="M13.993 11.06a1.418 1.418 0 0 1-1.932-.518l-2.829-4.9a1.418 1.418 0 0 1 .518-1.931 1.418 1.418 0 0 1 1.932.517l2.829 4.9a1.418 1.418 0 0 1-.518 1.931"
    opacity=".55"
  />
</svg>
`;
